static/css/gSTYLE.css
/* General body settings */
body {
    margin: 0;
    padding: 0;
    background-color: white;
    font-family: 'Italianno', cursive;
    background-image: url("/static/images/background.jpg");
    background-size: cover; 
    background-repeat: no-repeat; 
    background-position: center; 
}
strong{
    font-family: "Italiana", serif;
    font-weight: bold;
    font-size: 30px;
}
h1{
    font-family: 'Italianno', cursive;
    font-weight: bold;
    font-size: 40px;
}
h2{
    font-family: 'Italianno', cursive;
    font-weight: bold;
    font-size: 30px;
}
h3{
    font-family: 'Italianno', cursive;
    font-weight: bold;
    font-size: 20px;
}
span{
    font-family: "Italiana", serif;
    font-weight: bold;
    font-size: 18px;
}
p {
    font-family: "Italiana", serif;
    font-weight: bold;
    font-size: 40px;
}

@media (min-width: 600px) {
    .center-text {
        font-size: 40px;
    }
}

/* Scroll settings */
html, body {
    height: 100%; /* Allow scrolling */
    overflow-y: auto; /* Enable vertical scroll */
}

